--- a/chess.css
+++ b/chess.css
@@ -1,5 +1,5 @@
 /* .boardSquare    {} */
 
-#blackSquare   {background-color: black; width: 5vw; height: 5vw;}
+#brownSquare   {background-color: brown; width: 5vw; height: 5vw;}
 
-#whiteSquare   {background-color: grey; width: 5vw; height: 5vw;}
+#greySquare   {background-color: grey; width: 5vw; height: 5vw;}
