--- a/chess.css
+++ b/chess.css
@@ -2,8 +2,8 @@
     font-size: larger;
 }
 
-.boardSquare    {text-align: center; vertical-align: middle;}
+/* .boardSquare    {} */
 
-#brownSquare   {background-color: brown; width: 5vw; height: 5vw;}
+#brownSquare   {background-color: brown; width: 5vw; height: 5vw; text-align: center; vertical-align: middle;}
 
-#greySquare   {background-color: grey; width: 5vw; height: 5vw;}
+#greySquare   {background-color: grey; width: 5vw; height: 5vw; text-align: center; vertical-align: middle;}
